# Store_Intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: anomalies.py  db.py  funnel.py  health.py  heatmap.py  ingestion.py  main.py  metrics.py  models.py
dashboard/: dashboard.py
dataset/: pos_transactions.csv  sample_events.jsonl  store_layout.json
docs/: CHOICES.md  DESIGN.md
pipeline/: detect.py  emit.py  run.sh  tracker.py
tests/: conftest.py  test_anomalies.py  test_metrics.py  test_pipeline.py
