[tool.poetry]
name = "store-intelligence"
version = "0.1.0"
description = "Apex Retail Store Intelligence - CCTV to live analytics API"
authors = ["Shaheem <Invisiedge@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "pipeline" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
ultralytics = "^8.2.0"
supervision = "^0.20.0"
opencv-python-headless = "^4.9.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
